# real-time-event-platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/api/: main.py  routes.py  schemas.py
app/core/: config.py  logging.py  metrics.py
app/producer/: event_publisher.py
app/storage/: db.py  models.py  redis_client.py
app/workers/: backpressure.py  consumer.py  main.py  processor.py  retry_policy.py
architecture/: benchmark-results.md
docker/: Dockerfile.api  Dockerfile.worker  compose.yaml  nginx.conf  prometheus.yml
docker/grafana/provisioning/dashboards/: event-platform.json
docs/incidents/: INC-001-worker-oom-kill.md  INC-002-duplicate-events-redis-restart.md  INC-003-postgres-pool-exhaustion.md  INC-004-dead-letter-missing-reason.md  INC-005-xclaim-recovery-loop.md  INC-006-nginx-502-during-restart.md  INC-007-backpressure-too-aggressive.md  INC-008-prometheus-scrape-worker-port.md  INC-009-event-type-validation-bypass.md  INC-010-redis-connection-leak.md  INC-011-consumer-group-not-created.md  INC-012-grafana-negative-rate.md  INC-013-page-view-missing-url.md  INC-014-postgres-migration-race.md  INC-015-load-test-throughput-ceiling.md  INC-016-get-events-serialization-error.md  INC-017-dedup-ttl-mismatch.md
load_testing/: benchmark_runner.py  generate_events.py
scripts/: reset_env.sh  run_benchmark.sh  seed_data.py
tests/: conftest.py  test_api.py  test_core.py  test_models.py  test_publisher.py  test_retries.py  test_schemas.py  test_workers.py
